fixed translation errors in forms

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -139,7 +139,78 @@
     "copyLink": "Copy Link",
     "shareViaEmail": "Share via Email",
     "print": "Print",
-    "generateReport": "Generate Report"
+    "generateReport": "Generate Report",
+    "addJobRoleForm": {
+      "title": "Add New Job Role",
+      "subtitle": "Create a new job role opportunity",
+      "backToJobRoles": "Back to Job Roles",
+      "formTitle": "Job Role Details",
+      "jobRoleName": "Job Role Name",
+      "jobRoleNameRequired": "Job Role Name *",
+      "location": "Location",
+      "locationRequired": "Location *",
+      "capability": "Capability",
+      "capabilityRequired": "Capability *",
+      "selectCapability": "Select Capability",
+      "band": "Band",
+      "bandRequired": "Band *",
+      "selectBand": "Select Band",
+      "bandJunior": "Junior",
+      "bandMid": "Mid",
+      "bandSenior": "Senior",
+      "bandPrincipal": "Principal",
+      "status": "Status",
+      "statusRequired": "Status *",
+      "selectStatus": "Select Status",
+      "statusOpen": "Open",
+      "statusClosed": "Closed",
+      "numberOfPositions": "Number of Positions",
+      "numberOfPositionsRequired": "Number of Positions *",
+      "closingDate": "Closing Date",
+      "closingDateRequired": "Closing Date *",
+      "jobSpecLink": "Job Specification Link",
+      "jobSpecLinkPlaceholder": "https://company.com/careers/job-spec (optional)",
+      "jobSpecLinkHint": "Optional - Link to detailed job specification",
+      "description": "Description",
+      "descriptionRequired": "Description *",
+      "responsibilities": "Responsibilities",
+      "responsibilitiesRequired": "Responsibilities *",
+      "responsibilitiesPlaceholder": "Enter responsibilities separated by commas",
+      "responsibilitiesHint": "Separate multiple responsibilities with commas",
+      "cancel": "Cancel",
+      "createJobRole": "Create Job Role",
+      "errorOccurred": "An error occurred"
+    },
+    "editJobRoleForm": {
+      "title": "Edit Job Role",
+      "subtitle": "Update the details for this job role",
+      "backToJobRoles": "Back to Job Roles",
+      "jobRoleNameRequired": "Job Role Name *",
+      "locationRequired": "Location *",
+      "capabilityRequired": "Capability *",
+      "selectCapability": "Select Capability",
+      "bandRequired": "Band *",
+      "selectBand": "Select Band",
+      "bandJunior": "Junior",
+      "bandMid": "Mid",
+      "bandSenior": "Senior",
+      "bandPrincipal": "Principal",
+      "statusRequired": "Status *",
+      "selectStatus": "Select Status",
+      "statusOpen": "Open",
+      "statusClosed": "Closed",
+      "numberOfPositionsRequired": "Number of Positions *",
+      "closingDateRequired": "Closing Date *",
+      "jobSpecLink": "Job Specification Link",
+      "jobSpecLinkPlaceholder": "https://company.com/careers/job-spec (optional)",
+      "jobSpecLinkHint": "Optional - Link to detailed job specification",
+      "descriptionRequired": "Description *",
+      "responsibilitiesRequired": "Responsibilities *",
+      "responsibilitiesPlaceholder": "Enter responsibilities separated by commas",
+      "responsibilitiesHint": "Separate multiple responsibilities with commas",
+      "cancel": "Cancel",
+      "saveChanges": "Save Changes"
+    }
   },
   "jobApplication": {
     "title": "Apply for Position",
