--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -139,7 +139,78 @@
     "copyLink": "Copiar Enlace",
     "shareViaEmail": "Compartir por Correo Electrónico",
     "print": "Imprimir",
-    "generateReport": "Generar Informe"
+    "generateReport": "Generar Informe",
+    "addJobRoleForm": {
+      "title": "Agregar Nuevo Rol de Trabajo",
+      "subtitle": "Crear una nueva oportunidad de rol de trabajo",
+      "backToJobRoles": "Volver a Roles de Trabajo",
+      "formTitle": "Detalles del Rol de Trabajo",
+      "jobRoleName": "Nombre del Rol de Trabajo",
+      "jobRoleNameRequired": "Nombre del Rol de Trabajo *",
+      "location": "Ubicación",
+      "locationRequired": "Ubicación *",
+      "capability": "Capacidad",
+      "capabilityRequired": "Capacidad *",
+      "selectCapability": "Seleccionar Capacidad",
+      "band": "Nivel",
+      "bandRequired": "Nivel *",
+      "selectBand": "Seleccionar Nivel",
+      "bandJunior": "Junior",
+      "bandMid": "Medio",
+      "bandSenior": "Senior",
+      "bandPrincipal": "Principal",
+      "status": "Estado",
+      "statusRequired": "Estado *",
+      "selectStatus": "Seleccionar Estado",
+      "statusOpen": "Abierto",
+      "statusClosed": "Cerrado",
+      "numberOfPositions": "Número de Posiciones",
+      "numberOfPositionsRequired": "Número de Posiciones *",
+      "closingDate": "Fecha de Cierre",
+      "closingDateRequired": "Fecha de Cierre *",
+      "jobSpecLink": "Enlace de Especificación del Trabajo",
+      "jobSpecLinkPlaceholder": "https://company.com/careers/job-spec (opcional)",
+      "jobSpecLinkHint": "Opcional - Enlace a la especificación detallada del trabajo",
+      "description": "Descripción",
+      "descriptionRequired": "Descripción *",
+      "responsibilities": "Responsabilidades",
+      "responsibilitiesRequired": "Responsabilidades *",
+      "responsibilitiesPlaceholder": "Ingrese las responsabilidades separadas por comas",
+      "responsibilitiesHint": "Separe múltiples responsabilidades con comas",
+      "cancel": "Cancelar",
+      "createJobRole": "Crear Rol de Trabajo",
+      "errorOccurred": "Ocurrió un error"
+    },
+    "editJobRoleForm": {
+      "title": "Editar Rol de Trabajo",
+      "subtitle": "Actualizar los detalles de este rol de trabajo",
+      "backToJobRoles": "Volver a Roles de Trabajo",
+      "jobRoleNameRequired": "Nombre del Rol de Trabajo *",
+      "locationRequired": "Ubicación *",
+      "capabilityRequired": "Capacidad *",
+      "selectCapability": "Seleccionar Capacidad",
+      "bandRequired": "Nivel *",
+      "selectBand": "Seleccionar Nivel",
+      "bandJunior": "Junior",
+      "bandMid": "Medio",
+      "bandSenior": "Senior",
+      "bandPrincipal": "Principal",
+      "statusRequired": "Estado *",
+      "selectStatus": "Seleccionar Estado",
+      "statusOpen": "Abierto",
+      "statusClosed": "Cerrado",
+      "numberOfPositionsRequired": "Número de Posiciones *",
+      "closingDateRequired": "Fecha de Cierre *",
+      "jobSpecLink": "Enlace de Especificación del Trabajo",
+      "jobSpecLinkPlaceholder": "https://company.com/careers/job-spec (opcional)",
+      "jobSpecLinkHint": "Opcional - Enlace a la especificación detallada del trabajo",
+      "descriptionRequired": "Descripción *",
+      "responsibilitiesRequired": "Responsabilidades *",
+      "responsibilitiesPlaceholder": "Ingrese las responsabilidades separadas por comas",
+      "responsibilitiesHint": "Separe múltiples responsabilidades con comas",
+      "cancel": "Cancelar",
+      "saveChanges": "Guardar Cambios"
+    }
   },
   "jobApplication": {
     "title": "Solicitar Puesto",
