--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -139,7 +139,78 @@
     "copyLink": "Copier le Lien",
     "shareViaEmail": "Partager par E-mail",
     "print": "Imprimer",
-    "generateReport": "Générer un Rapport"
+    "generateReport": "Générer un Rapport",
+    "addJobRoleForm": {
+      "title": "Ajouter un Nouveau Poste",
+      "subtitle": "Créer une nouvelle opportunité de poste",
+      "backToJobRoles": "Retour aux Postes",
+      "formTitle": "Détails du Poste",
+      "jobRoleName": "Nom du Poste",
+      "jobRoleNameRequired": "Nom du Poste *",
+      "location": "Emplacement",
+      "locationRequired": "Emplacement *",
+      "capability": "Capacité",
+      "capabilityRequired": "Capacité *",
+      "selectCapability": "Sélectionner une Capacité",
+      "band": "Niveau",
+      "bandRequired": "Niveau *",
+      "selectBand": "Sélectionner un Niveau",
+      "bandJunior": "Junior",
+      "bandMid": "Intermédiaire",
+      "bandSenior": "Senior",
+      "bandPrincipal": "Principal",
+      "status": "Statut",
+      "statusRequired": "Statut *",
+      "selectStatus": "Sélectionner un Statut",
+      "statusOpen": "Ouvert",
+      "statusClosed": "Fermé",
+      "numberOfPositions": "Nombre de Postes",
+      "numberOfPositionsRequired": "Nombre de Postes *",
+      "closingDate": "Date de Clôture",
+      "closingDateRequired": "Date de Clôture *",
+      "jobSpecLink": "Lien de Spécification du Poste",
+      "jobSpecLinkPlaceholder": "https://company.com/careers/job-spec (optionnel)",
+      "jobSpecLinkHint": "Optionnel - Lien vers la spécification détaillée du poste",
+      "description": "Description",
+      "descriptionRequired": "Description *",
+      "responsibilities": "Responsabilités",
+      "responsibilitiesRequired": "Responsabilités *",
+      "responsibilitiesPlaceholder": "Entrez les responsabilités séparées par des virgules",
+      "responsibilitiesHint": "Séparez plusieurs responsabilités par des virgules",
+      "cancel": "Annuler",
+      "createJobRole": "Créer un Poste",
+      "errorOccurred": "Une erreur s'est produite"
+    },
+    "editJobRoleForm": {
+      "title": "Modifier le Poste",
+      "subtitle": "Mettre à jour les détails de ce poste",
+      "backToJobRoles": "Retour aux Postes",
+      "jobRoleNameRequired": "Nom du Poste *",
+      "locationRequired": "Emplacement *",
+      "capabilityRequired": "Capacité *",
+      "selectCapability": "Sélectionner une Capacité",
+      "bandRequired": "Niveau *",
+      "selectBand": "Sélectionner un Niveau",
+      "bandJunior": "Junior",
+      "bandMid": "Intermédiaire",
+      "bandSenior": "Senior",
+      "bandPrincipal": "Principal",
+      "statusRequired": "Statut *",
+      "selectStatus": "Sélectionner un Statut",
+      "statusOpen": "Ouvert",
+      "statusClosed": "Fermé",
+      "numberOfPositionsRequired": "Nombre de Postes *",
+      "closingDateRequired": "Date de Clôture *",
+      "jobSpecLink": "Lien de Spécification du Poste",
+      "jobSpecLinkPlaceholder": "https://company.com/careers/job-spec (optionnel)",
+      "jobSpecLinkHint": "Optionnel - Lien vers la spécification détaillée du poste",
+      "descriptionRequired": "Description *",
+      "responsibilitiesRequired": "Responsabilités *",
+      "responsibilitiesPlaceholder": "Entrez les responsabilités séparées par des virgules",
+      "responsibilitiesHint": "Séparez plusieurs responsabilités par des virgules",
+      "cancel": "Annuler",
+      "saveChanges": "Enregistrer les Modifications"
+    }
   },
   "jobApplication": {
     "title": "Postuler pour le Poste",
