Adding a page to view applicants
Frontend Implementation Summary
New Components Added:
ApplicantsController - Admin-only controller with applicant management methods
ApplicationApiService - Extended with getAllApplications() API call
applicants.njk - Full-featured template with filtering, pagination, and export
Navigation Updates - Added "Applicants" link visible only to admins
Routes - Added /applicants and /applicants/export endpoints
Key Features:
Admin Authentication - Blocks non-admin users completely
Advanced Filtering - By job role, status, capability, band, and search
Pagination - 20 items per page with navigation
CSV Export - Download all applicant data
Responsive Design - Mobile-friendly interface

https://planner.cloud.microsoft/webui/v1/plan/hje9cdYoUUmS19kW8S3Jj5YABmbQ/view/board/task/_fwfjSzZqUaYWgqsdJgihJYAL3PA?tid=7ed9bdc7-964d-4dc0-9084-812b90e05c6d

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -2,6 +2,7 @@
   "nav": {
     "home": "Home",
     "jobRoles": "Job Roles",
+    "applicants": "Applicants",
     "login": "Login",
     "profile": "Profile",
     "menu": "Menu",
