--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -2,6 +2,7 @@
   "nav": {
     "home": "Inicio",
     "jobRoles": "Roles de Trabajo",
+    "applicants": "Candidatos",
     "login": "Iniciar Sesión",
     "profile": "Perfil",
     "menu": "Menú",
