--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -2,6 +2,7 @@
   "nav": {
     "home": "Accueil",
     "jobRoles": "Rôles d'Emploi",
+    "applicants": "Candidats",
     "login": "Connexion",
     "profile": "Profil",
     "menu": "Menu",
