--- a/locales/pl/translation.json
+++ b/locales/pl/translation.json
@@ -2,6 +2,7 @@
   "nav": {
     "home": "Strona główna",
     "jobRoles": "Role zawodowe",
+    "applicants": "Kandydaci",
     "login": "Zaloguj się",
     "profile": "Profil",
     "menu": "Menu",
